ENV-linux: add empty kernel/irq.c kernel/time.c kernel/traps.c and mm/init.c
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/Makefile
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/Makefile
@@ -17,6 +17,7 @@ CHECKFLAGS		+= -D__dadao__
 head-y			:= arch/dadao/kernel/head.o
 
 core-y			+= arch/dadao/kernel/
+core-y			+= arch/dadao/mm/
 
 libs-y			+= arch/dadao/lib/
 
