ENV-linux: add GENERIC_CALIBRATE_DELAY
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
@@ -17,6 +17,9 @@ config PGTABLE_LEVELS
 config CPU_LITTLE_ENDIAN
 	def_bool y
 
+config GENERIC_CALIBRATE_DELAY
+	def_bool y
+
 menu "Kernel Features"
 
 source "kernel/Kconfig.hz"
