ENV-linux: select HAVE_COPY_THREAD_TLS in Kconfig
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
@@ -2,6 +2,7 @@ config DADAO
 	def_bool y
 	select GENERIC_IOMAP
 	select HAVE_RCU_TABLE_FREE
+	select HAVE_COPY_THREAD_TLS
 
 config 64BIT
 	def_bool y
