ENV-linux: add empty kernel/process.c
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/kernel/Makefile
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/kernel/Makefile
@@ -2,6 +2,7 @@
 # Makefile for the dadao linux kernel.
 #
 obj-y				+= irq.o
+obj-y				+= process.o
 obj-y				+= setup.o
 obj-y				+= time.o traps.o
 
