ENV-linux: add empty kernel/stacktrace.c
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/kernel/Makefile
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/kernel/Makefile
@@ -4,7 +4,7 @@
 obj-y				+= irq.o
 obj-y				+= process.o
 obj-y				+= reset.o
-obj-y				+= setup.o
+obj-y				+= setup.o stacktrace.o
 obj-y				+= time.o traps.o
 
 head-y				:= head.o
