--- a/TCH-binutils-gdb/Makefile.binutils-gdb-0235
+++ b/TCH-binutils-gdb/Makefile.binutils-gdb-0235
@@ -13,6 +13,7 @@ BINUTILS_GDB_0235_PATCHES		:= $(DIR_DADAO_TOP)/TCH-binutils-gdb/binutils-gdb-023
 BINUTILS_GDB_0235_SOURCE		:= $(DIR_DADAO_SOURCE)/binutils-gdb-0235
 BINUTILS_GDB_0235_OPCODES		:= $(BINUTILS_GDB_0235_SOURCE)/opcodes/dadao-insn.opc
 BINUTILS_GDB_0235_DISASSEMBLE		:= $(BINUTILS_GDB_0235_SOURCE)/opcodes/dadao-dis.h
+BINUTILS_GDB_0235_ENCODING		:= $(BINUTILS_GDB_0235_SOURCE)/include/opcode/encoding.h
 BINUTILS_GDB_0235_BUILD			:= $(DIR_DADAO_BUILD)/binutils-gdb-0235
 BINUTILS_GDB_0235_INSTALL		?= $(DIR_DADAO_INSTALL)
 #BINUTILS_GDB_0235_INSTALL		?= $(DIR_DADAO_BUILD)/__binutils-gdb-0235
@@ -101,8 +102,10 @@ endif
 	# OPCODES: Generate dadao opcodes file
 	@make -s -C $(DIR_DADAO_TOP) opcodes-binutils
 	@make -s -C $(DIR_DADAO_TOP) opcodes-disassemble
+	@make -s -C $(DIR_DADAO_TOP) opcodes-encoding
 	@cp $(OPCODES_OUTPUT_BIN) $(BINUTILS_GDB_0235_OPCODES)
 	@cp $(OPCODES_OUTPUT_DIS) $(BINUTILS_GDB_0235_DISASSEMBLE)
+	@cp $(OPCODES_OUTPUT_ENV) $(BINUTILS_GDB_0235_ENCODING)
 	@cd $(BINUTILS_GDB_0235_SOURCE);				\
 		git add opcodes;					\
 		git commit -sm"DADAO: add opcodes support";		\
