ENV-linux: add 0001-DADAO-fixup-kernel-time-Makefile.patch
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/Makefile.linux-0504
+++ b/ENV-linux/Makefile.linux-0504
@@ -60,7 +60,7 @@ endif
 	# Apply linux-0504-patches ...
 	@cd $(LINUX_0504_SOURCE); git am $(LINUX_0504_PATCHES)/*.patch
 	# Apply linux-0504-fixups ...
-	#@cd $(LINUX_0504_SOURCE); git am $(LINUX_0504_FIXUPS)/*.patch
+	@cd $(LINUX_0504_SOURCE); git am $(LINUX_0504_FIXUPS)/*.patch
 
 linux-0504-build-new:
 	# Remove old linux build dir ...
