ENV-linux: add GENERIC_IRQ_SHOW and GENERIC_HWEIGHT configs
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
@@ -1,6 +1,7 @@
 config DADAO
 	def_bool y
 	select GENERIC_IOMAP
+	select GENERIC_IRQ_SHOW
 	select HAVE_RCU_TABLE_FREE
 	select HAVE_COPY_THREAD_TLS
 
@@ -16,6 +17,9 @@ config PGTABLE_LEVELS
 	default 4
 
 config CPU_LITTLE_ENDIAN
+	def_bool y
+
+config GENERIC_HWEIGHT
 	def_bool y
 
 config GENERIC_CALIBRATE_DELAY
