--- a/ENV-linux/linux-0504-newfiles/arch/dadao/kernel/Makefile
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/kernel/Makefile
@@ -4,7 +4,7 @@
 obj-y				+= cpu.o
 obj-y				+= entry.o
 obj-y				+= irq.o
-obj-y				+= process.o
+obj-y				+= process.o ptrace.o
 obj-y				+= reset.o
 obj-y				+= setup.o stacktrace.o
 obj-y				+= time.o traps.o
