ENV-linux: add GENERIC_CSUM config
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
@@ -19,6 +19,9 @@ config PGTABLE_LEVELS
 config CPU_LITTLE_ENDIAN
 	def_bool y
 
+config GENERIC_CSUM
+	def_bool y
+
 config GENERIC_HWEIGHT
 	def_bool y
 
