ENV-linux: linux-0504-build work now
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/Makefile.linux-0504
+++ b/ENV-linux/Makefile.linux-0504
@@ -96,7 +96,7 @@ linux-0504-highfive:
 	# 3. Configure linux ...
 	@make -s linux-0504-build-new				1>> $(LINUX_0504_LOG_STDOUT) 2>> $(LINUX_0504_LOG_STDERR)
 	# 4. Make linux ...
-#	@make -s linux-0504-build				1>> $(LINUX_0504_LOG_STDOUT) 2>> $(LINUX_0504_LOG_STDERR)
+	@make -s linux-0504-build				1>> $(LINUX_0504_LOG_STDOUT) 2>> $(LINUX_0504_LOG_STDERR)
 	# 5. Install linux images ...
 #	@make -s linux-0504-install				1>> $(LINUX_0504_LOG_STDOUT) 2>> $(LINUX_0504_LOG_STDERR)
 	# BUILD linux-0504 DONE!
