--- a/DADAO-tests/Makefile.tests
+++ b/DADAO-tests/Makefile.tests
@@ -26,6 +26,9 @@ tests-bmarks-bare-highfive:
 	@mkdir -p $(TESTS_BMARKS_BARE_BUILD)
 	@ln -s $(TESTS_BMARKS_BARE_SOURCE)/Makefile $(TESTS_BMARKS_BARE_BUILD)/Makefile
 	@$(DADAO_MAKE) src_dir=$(TESTS_BMARKS_BARE_SOURCE) -C $(TESTS_BMARKS_BARE_BUILD)
+	@make -C $(DIR_DADAO_TOP)									\
+		CHIPYARD_$(VER_CHIPYARD)_DADAO_BINARY=$(TESTS_BMARKS_BARE_BUILD)/dhrystone.dadao	\
+		chipyard-$(VER_CHIPYARD)-run-binary
 
 tests-bmarks-qemu-dhrystone-highfive:
 	@rm -fr $(TESTS_BMARKS_QEMU_BUILD)/dhrystone
