DADAO-tests: adjust bootrom common.mk
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-tests/bootrom/Makefile
+++ b/DADAO-tests/bootrom/Makefile
@@ -1,7 +1,7 @@
 bootrom_img = bootrom.dadao.img
 bootrom_dump = bootrom.dadao.dump
 
-include $(src_dir)/../common.mk
+include common.mk
 
 default: img dump
 
